# automated_crop_calibration

./: .gitignore  LICENSE  README.md  bbox_coordinates.txt  conveyor_belt_identification.py  crop_coordinates_with_bbox.py  myfile.txt  pyproject.toml
